fix(mobile): Button in header - wrong width [OAPTAU-436]
- wrong text button width in header: 167px -> 176px
- cancel button in example didn't work because lack of data-rel attribute

--- a/tau/src/css/profile/mobile/changeable/common/header.less
+++ b/tau/src/css/profile/mobile/changeable/common/header.less
@@ -132,7 +132,7 @@
 			margin: 8 * @unit_base;
 			text-indent: 0;
 			height: 94 * @unit_base;
-			width: 167 * @unit_base;
+			width: 176 * @unit_base;
 			box-sizing: border-box;
 			color: @color_button_text_normal;
 			line-height: 94 * @unit_base;
